deploy/frontend/deploy-frontend.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  labels:
    k8s-app: deploy-frontend
  name: deploy-frontend
  namespace: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: deploy-frontend
  template:
    metadata:
      labels:
        k8s-app: deploy-frontend
    spec:
      containers:
      - image: quay.io/dhtech/deploy-frontend
        imagePullPolicy: Always
        name: frontend
        volumeMounts:
        - mountPath: "/etc/ipplan/"
          name: ipplan
        - mountPath: "/etc/deploy/"
          name: deploy-config
      - image: quay.io/dhtech/dhauth
        imagePullPolicy: Always
        name: dhauth
      - image: quay.io/dhtech/ipplan
        imagePullPolicy: Always
        name: ipplan
        volumeMounts:
        - mountPath: "/etc/ipplan/"
          name: ipplan
      restartPolicy: Always
      volumes:
      - name: ipplan
        emptyDir: {}
      - name: deploy-config
        secret:
          secretName: deploy-config
