deploy/frontend/deploy-frontend-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-frontend
  namespace: deploy
  labels:
    k8s-app: deploy-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: deploy-frontend
  type: ClusterIP
